qt/gen_qtextformat.h

class QBrush;
class QColor;
class QPen;
class QTextFormat;
class QTextLength;
class QVariant;
typedef struct QBrush QBrush;
typedef struct QColor QColor;
typedef struct QPen QPen;
typedef struct QTextFormat QTextFormat;
typedef struct QTextFrameFormat QTextFrameFormat;
typedef struct QTextLength QTextLength;
typedef struct QTextTableCellFormat QTextTableCellFormat;
typedef struct QTextTableFormat QTextTableFormat;
typedef struct QVariant QVariant;
void QTextFrameFormat_setPageBreakPolicy(QTextFrameFormat* self, int flags);
int QTextFrameFormat_pageBreakPolicy(const QTextFrameFormat* self);
void QTextFrameFormat_delete(QTextFrameFormat* self);
QTextTableFormat* QTextTableFormat_new();
bool QTextTableFormat_isValid(const QTextTableFormat* self);
int QTextTableFormat_columns(const QTextTableFormat* self);
void QTextTableFormat_setColumns(QTextTableFormat* self, int columns);
void QTextTableFormat_setColumnWidthConstraints(QTextTableFormat* self, struct miqt_array /* of QTextLength* */  constraints);
struct miqt_array /* of QTextLength* */  QTextTableFormat_columnWidthConstraints(const QTextTableFormat* self);
void QTextTableFormat_clearColumnWidthConstraints(QTextTableFormat* self);
double QTextTableFormat_cellSpacing(const QTextTableFormat* self);
void QTextTableFormat_setCellSpacing(QTextTableFormat* self, double spacing);
double QTextTableFormat_cellPadding(const QTextTableFormat* self);
void QTextTableFormat_setCellPadding(QTextTableFormat* self, double padding);
void QTextTableFormat_setAlignment(QTextTableFormat* self, int alignment);
int QTextTableFormat_alignment(const QTextTableFormat* self);
void QTextTableFormat_setHeaderRowCount(QTextTableFormat* self, int count);
int QTextTableFormat_headerRowCount(const QTextTableFormat* self);
void QTextTableFormat_setBorderCollapse(QTextTableFormat* self, bool borderCollapse);
bool QTextTableFormat_borderCollapse(const QTextTableFormat* self);
void QTextTableFormat_delete(QTextTableFormat* self);
QTextTableCellFormat* QTextTableCellFormat_new();
bool QTextTableCellFormat_isValid(const QTextTableCellFormat* self);
void QTextTableCellFormat_setTopPadding(QTextTableCellFormat* self, double padding);
double QTextTableCellFormat_topPadding(const QTextTableCellFormat* self);
void QTextTableCellFormat_setBottomPadding(QTextTableCellFormat* self, double padding);
double QTextTableCellFormat_bottomPadding(const QTextTableCellFormat* self);
void QTextTableCellFormat_setLeftPadding(QTextTableCellFormat* self, double padding);
double QTextTableCellFormat_leftPadding(const QTextTableCellFormat* self);
void QTextTableCellFormat_setRightPadding(QTextTableCellFormat* self, double padding);
double QTextTableCellFormat_rightPadding(const QTextTableCellFormat* self);
void QTextTableCellFormat_setPadding(QTextTableCellFormat* self, double padding);
void QTextTableCellFormat_setTopBorder(QTextTableCellFormat* self, double width);
double QTextTableCellFormat_topBorder(const QTextTableCellFormat* self);
void QTextTableCellFormat_setBottomBorder(QTextTableCellFormat* self, double width);
double QTextTableCellFormat_bottomBorder(const QTextTableCellFormat* self);
void QTextTableCellFormat_setLeftBorder(QTextTableCellFormat* self, double width);
double QTextTableCellFormat_leftBorder(const QTextTableCellFormat* self);
void QTextTableCellFormat_setRightBorder(QTextTableCellFormat* self, double width);
double QTextTableCellFormat_rightBorder(const QTextTableCellFormat* self);
void QTextTableCellFormat_setBorder(QTextTableCellFormat* self, double width);
void QTextTableCellFormat_setTopBorderStyle(QTextTableCellFormat* self, int style);
int QTextTableCellFormat_topBorderStyle(const QTextTableCellFormat* self);
void QTextTableCellFormat_setBottomBorderStyle(QTextTableCellFormat* self, int style);
int QTextTableCellFormat_bottomBorderStyle(const QTextTableCellFormat* self);
void QTextTableCellFormat_setLeftBorderStyle(QTextTableCellFormat* self, int style);
int QTextTableCellFormat_leftBorderStyle(const QTextTableCellFormat* self);
void QTextTableCellFormat_setRightBorderStyle(QTextTableCellFormat* self, int style);
int QTextTableCellFormat_rightBorderStyle(const QTextTableCellFormat* self);
void QTextTableCellFormat_setBorderStyle(QTextTableCellFormat* self, int style);
void QTextTableCellFormat_setTopBorderBrush(QTextTableCellFormat* self, QBrush* brush);
QBrush* QTextTableCellFormat_topBorderBrush(const QTextTableCellFormat* self);
void QTextTableCellFormat_setBottomBorderBrush(QTextTableCellFormat* self, QBrush* brush);
QBrush* QTextTableCellFormat_bottomBorderBrush(const QTextTableCellFormat* self);
void QTextTableCellFormat_setLeftBorderBrush(QTextTableCellFormat* self, QBrush* brush);
QBrush* QTextTableCellFormat_leftBorderBrush(const QTextTableCellFormat* self);
void QTextTableCellFormat_setRightBorderBrush(QTextTableCellFormat* self, QBrush* brush);
QBrush* QTextTableCellFormat_rightBorderBrush(const QTextTableCellFormat* self);
void QTextTableCellFormat_setBorderBrush(QTextTableCellFormat* self, QBrush* brush);
void QTextTableCellFormat_delete(QTextTableCellFormat* self);