qt/gen_qtextformat.nim

proc fcQTextFrameFormat_setPageBreakPolicy(self: pointer, flags: cint): void {.importc: "QTextFrameFormat_setPageBreakPolicy".}
proc fcQTextFrameFormat_pageBreakPolicy(self: pointer, ): cint {.importc: "QTextFrameFormat_pageBreakPolicy".}
proc fcQTextFrameFormat_delete(self: pointer) {.importc: "QTextFrameFormat_delete".}
proc fcQTextTableFormat_new(): ptr cQTextTableFormat {.importc: "QTextTableFormat_new".}
proc fcQTextTableFormat_isValid(self: pointer, ): bool {.importc: "QTextTableFormat_isValid".}
proc fcQTextTableFormat_columns(self: pointer, ): cint {.importc: "QTextTableFormat_columns".}
proc fcQTextTableFormat_setColumns(self: pointer, columns: cint): void {.importc: "QTextTableFormat_setColumns".}
proc fcQTextTableFormat_setColumnWidthConstraints(self: pointer, constraints: struct_miqt_array): void {.importc: "QTextTableFormat_setColumnWidthConstraints".}
proc fcQTextTableFormat_columnWidthConstraints(self: pointer, ): struct_miqt_array {.importc: "QTextTableFormat_columnWidthConstraints".}
proc fcQTextTableFormat_clearColumnWidthConstraints(self: pointer, ): void {.importc: "QTextTableFormat_clearColumnWidthConstraints".}
proc fcQTextTableFormat_cellSpacing(self: pointer, ): float64 {.importc: "QTextTableFormat_cellSpacing".}
proc fcQTextTableFormat_setCellSpacing(self: pointer, spacing: float64): void {.importc: "QTextTableFormat_setCellSpacing".}
proc fcQTextTableFormat_cellPadding(self: pointer, ): float64 {.importc: "QTextTableFormat_cellPadding".}
proc fcQTextTableFormat_setCellPadding(self: pointer, padding: float64): void {.importc: "QTextTableFormat_setCellPadding".}
proc fcQTextTableFormat_setAlignment(self: pointer, alignment: cint): void {.importc: "QTextTableFormat_setAlignment".}
proc fcQTextTableFormat_alignment(self: pointer, ): cint {.importc: "QTextTableFormat_alignment".}
proc fcQTextTableFormat_setHeaderRowCount(self: pointer, count: cint): void {.importc: "QTextTableFormat_setHeaderRowCount".}
proc fcQTextTableFormat_headerRowCount(self: pointer, ): cint {.importc: "QTextTableFormat_headerRowCount".}
proc fcQTextTableFormat_setBorderCollapse(self: pointer, borderCollapse: bool): void {.importc: "QTextTableFormat_setBorderCollapse".}
proc fcQTextTableFormat_borderCollapse(self: pointer, ): bool {.importc: "QTextTableFormat_borderCollapse".}
proc fcQTextTableFormat_delete(self: pointer) {.importc: "QTextTableFormat_delete".}
proc fcQTextTableCellFormat_new(): ptr cQTextTableCellFormat {.importc: "QTextTableCellFormat_new".}
proc fcQTextTableCellFormat_isValid(self: pointer, ): bool {.importc: "QTextTableCellFormat_isValid".}
proc fcQTextTableCellFormat_setTopPadding(self: pointer, padding: float64): void {.importc: "QTextTableCellFormat_setTopPadding".}
proc fcQTextTableCellFormat_topPadding(self: pointer, ): float64 {.importc: "QTextTableCellFormat_topPadding".}
proc fcQTextTableCellFormat_setBottomPadding(self: pointer, padding: float64): void {.importc: "QTextTableCellFormat_setBottomPadding".}
proc fcQTextTableCellFormat_bottomPadding(self: pointer, ): float64 {.importc: "QTextTableCellFormat_bottomPadding".}
proc fcQTextTableCellFormat_setLeftPadding(self: pointer, padding: float64): void {.importc: "QTextTableCellFormat_setLeftPadding".}
proc fcQTextTableCellFormat_leftPadding(self: pointer, ): float64 {.importc: "QTextTableCellFormat_leftPadding".}
proc fcQTextTableCellFormat_setRightPadding(self: pointer, padding: float64): void {.importc: "QTextTableCellFormat_setRightPadding".}
proc fcQTextTableCellFormat_rightPadding(self: pointer, ): float64 {.importc: "QTextTableCellFormat_rightPadding".}
proc fcQTextTableCellFormat_setPadding(self: pointer, padding: float64): void {.importc: "QTextTableCellFormat_setPadding".}
proc fcQTextTableCellFormat_setTopBorder(self: pointer, width: float64): void {.importc: "QTextTableCellFormat_setTopBorder".}
proc fcQTextTableCellFormat_topBorder(self: pointer, ): float64 {.importc: "QTextTableCellFormat_topBorder".}
proc fcQTextTableCellFormat_setBottomBorder(self: pointer, width: float64): void {.importc: "QTextTableCellFormat_setBottomBorder".}
proc fcQTextTableCellFormat_bottomBorder(self: pointer, ): float64 {.importc: "QTextTableCellFormat_bottomBorder".}
proc fcQTextTableCellFormat_setLeftBorder(self: pointer, width: float64): void {.importc: "QTextTableCellFormat_setLeftBorder".}
proc fcQTextTableCellFormat_leftBorder(self: pointer, ): float64 {.importc: "QTextTableCellFormat_leftBorder".}
proc fcQTextTableCellFormat_setRightBorder(self: pointer, width: float64): void {.importc: "QTextTableCellFormat_setRightBorder".}
proc fcQTextTableCellFormat_rightBorder(self: pointer, ): float64 {.importc: "QTextTableCellFormat_rightBorder".}
proc fcQTextTableCellFormat_setBorder(self: pointer, width: float64): void {.importc: "QTextTableCellFormat_setBorder".}
proc fcQTextTableCellFormat_setTopBorderStyle(self: pointer, style: cint): void {.importc: "QTextTableCellFormat_setTopBorderStyle".}
proc fcQTextTableCellFormat_topBorderStyle(self: pointer, ): cint {.importc: "QTextTableCellFormat_topBorderStyle".}
proc fcQTextTableCellFormat_setBottomBorderStyle(self: pointer, style: cint): void {.importc: "QTextTableCellFormat_setBottomBorderStyle".}
proc fcQTextTableCellFormat_bottomBorderStyle(self: pointer, ): cint {.importc: "QTextTableCellFormat_bottomBorderStyle".}
proc fcQTextTableCellFormat_setLeftBorderStyle(self: pointer, style: cint): void {.importc: "QTextTableCellFormat_setLeftBorderStyle".}
proc fcQTextTableCellFormat_leftBorderStyle(self: pointer, ): cint {.importc: "QTextTableCellFormat_leftBorderStyle".}
proc fcQTextTableCellFormat_setRightBorderStyle(self: pointer, style: cint): void {.importc: "QTextTableCellFormat_setRightBorderStyle".}
proc fcQTextTableCellFormat_rightBorderStyle(self: pointer, ): cint {.importc: "QTextTableCellFormat_rightBorderStyle".}
proc fcQTextTableCellFormat_setBorderStyle(self: pointer, style: cint): void {.importc: "QTextTableCellFormat_setBorderStyle".}
proc fcQTextTableCellFormat_setTopBorderBrush(self: pointer, brush: pointer): void {.importc: "QTextTableCellFormat_setTopBorderBrush".}
proc fcQTextTableCellFormat_topBorderBrush(self: pointer, ): pointer {.importc: "QTextTableCellFormat_topBorderBrush".}
proc fcQTextTableCellFormat_setBottomBorderBrush(self: pointer, brush: pointer): void {.importc: "QTextTableCellFormat_setBottomBorderBrush".}
proc fcQTextTableCellFormat_bottomBorderBrush(self: pointer, ): pointer {.importc: "QTextTableCellFormat_bottomBorderBrush".}
proc fcQTextTableCellFormat_setLeftBorderBrush(self: pointer, brush: pointer): void {.importc: "QTextTableCellFormat_setLeftBorderBrush".}
proc fcQTextTableCellFormat_leftBorderBrush(self: pointer, ): pointer {.importc: "QTextTableCellFormat_leftBorderBrush".}
proc fcQTextTableCellFormat_setRightBorderBrush(self: pointer, brush: pointer): void {.importc: "QTextTableCellFormat_setRightBorderBrush".}
proc fcQTextTableCellFormat_rightBorderBrush(self: pointer, ): pointer {.importc: "QTextTableCellFormat_rightBorderBrush".}
proc fcQTextTableCellFormat_setBorderBrush(self: pointer, brush: pointer): void {.importc: "QTextTableCellFormat_setBorderBrush".}
proc fcQTextTableCellFormat_delete(self: pointer) {.importc: "QTextTableCellFormat_delete".}


func init*(T: type QTextLength, h: ptr cQTextLength): QTextLength =
  T(h: h)
proc create*(T: type QTextLength, ): QTextLength =

  QTextLength.init(fcQTextLength_new())
proc create*(T: type QTextLength, typeVal: QTextLengthType, value: float64): QTextLength =

  QTextLength.init(fcQTextLength_new2(cint(typeVal), value))
proc create*(T: type QTextLength, param1: QTextLength): QTextLength =

  QTextLength.init(fcQTextLength_new3(param1.h))
proc typeX*(self: QTextLength, ): QTextLengthType =

  QTextLengthType(fcQTextLength_typeX(self.h))

proc value*(self: QTextLength, maximumLength: float64): float64 =

  fcQTextLength_value(self.h, maximumLength)

proc rawValue*(self: QTextLength, ): float64 =

  fcQTextLength_rawValue(self.h)

proc operatorEqual*(self: QTextLength, other: QTextLength): bool =

  fcQTextLength_operatorEqual(self.h, other.h)

proc operatorNotEqual*(self: QTextLength, other: QTextLength): bool =

  fcQTextLength_operatorNotEqual(self.h, other.h)

proc ToQVariant*(self: QTextLength, ): gen_qvariant.QVariant =

  gen_qvariant.QVariant(h: fcQTextLength_ToQVariant(self.h))

proc delete*(self: QTextLength) =
  fcQTextLength_delete(self.h)

func init*(T: type QTextFormat, h: ptr cQTextFormat): QTextFormat =
  T(h: h)
proc create*(T: type QTextFormat, ): QTextFormat =

  QTextFormat.init(fcQTextFormat_new())
proc create*(T: type QTextFormat, typeVal: cint): QTextFormat =

  QTextFormat.init(fcQTextFormat_new2(typeVal))
proc create*(T: type QTextFormat, rhs: QTextFormat): QTextFormat =

  QTextFormat.init(fcQTextFormat_new3(rhs.h))
proc operatorAssign*(self: QTextFormat, rhs: QTextFormat): void =

  fcQTextFormat_operatorAssign(self.h, rhs.h)

proc swap*(self: QTextFormat, other: QTextFormat): void =

  fcQTextFormat_swap(self.h, other.h)

proc merge*(self: QTextFormat, other: QTextFormat): void =

  fcQTextFormat_merge(self.h, other.h)

proc isValid*(self: QTextFormat, ): bool =

  fcQTextFormat_isValid(self.h)

proc isEmpty*(self: QTextFormat, ): bool =

  fcQTextFormat_isEmpty(self.h)

proc typeX*(self: QTextFormat, ): cint =

  fcQTextFormat_typeX(self.h)

proc objectIndex*(self: QTextFormat, ): cint =

  fcQTextFormat_objectIndex(self.h)

proc setObjectIndex*(self: QTextFormat, objectVal: cint): void =

  fcQTextFormat_setObjectIndex(self.h, objectVal)

proc property*(self: QTextFormat, propertyId: cint): gen_qvariant.QVariant =

  gen_qvariant.QVariant(h: fcQTextFormat_property(self.h, propertyId))

proc setProperty*(self: QTextFormat, propertyId: cint, value: gen_qvariant.QVariant): void =

  fcQTextFormat_setProperty(self.h, propertyId, value.h)

proc clearProperty*(self: QTextFormat, propertyId: cint): void =

  fcQTextFormat_clearProperty(self.h, propertyId)

proc hasProperty*(self: QTextFormat, propertyId: cint): bool =

  fcQTextFormat_hasProperty(self.h, propertyId)

proc boolProperty*(self: QTextFormat, propertyId: cint): bool =

  fcQTextFormat_boolProperty(self.h, propertyId)

proc intProperty*(self: QTextFormat, propertyId: cint): cint =

  fcQTextFormat_intProperty(self.h, propertyId)

proc doubleProperty*(self: QTextFormat, propertyId: cint): float64 =

  fcQTextFormat_doubleProperty(self.h, propertyId)

proc stringProperty*(self: QTextFormat, propertyId: cint): string =

  let v_ms = fcQTextFormat_stringProperty(self.h, propertyId)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc colorProperty*(self: QTextFormat, propertyId: cint): gen_qcolor.QColor =

  gen_qcolor.QColor(h: fcQTextFormat_colorProperty(self.h, propertyId))

proc penProperty*(self: QTextFormat, propertyId: cint): gen_qpen.QPen =

  gen_qpen.QPen(h: fcQTextFormat_penProperty(self.h, propertyId))

proc brushProperty*(self: QTextFormat, propertyId: cint): gen_qbrush.QBrush =

  gen_qbrush.QBrush(h: fcQTextFormat_brushProperty(self.h, propertyId))

proc lengthProperty*(self: QTextFormat, propertyId: cint): QTextLength =

  QTextLength(h: fcQTextFormat_lengthProperty(self.h, propertyId))

proc lengthVectorProperty*(self: QTextFormat, propertyId: cint): seq[QTextLength] =

  var v_ma = fcQTextFormat_lengthVectorProperty(self.h, propertyId)
  var vx_ret = newSeq[QTextLength](int(v_ma.len))
  let v_outCast = cast[ptr UncheckedArray[pointer]](v_ma.data)
  for i in 0 ..< v_ma.len:
    vx_ret[i] = QTextLength(h: v_outCast[i])
  vx_ret

proc setProperty2*(self: QTextFormat, propertyId: cint, lengths: seq[QTextLength]): void =

  var lengths_CArray = newSeq[pointer](len(lengths))
  for i in 0..<len(lengths):
    lengths_CArray[i] = lengths[i].h

  fcQTextFormat_setProperty2(self.h, propertyId, struct_miqt_array(len: csize_t(len(lengths)), data: if len(lengths) == 0: nil else: addr(lengths_CArray[0])))
